# dms_datastore

./: .buildinfo  .gitattributes  .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README-commands.md  README-dropbox.md  README.md  README.rst  commands.html  concepts.html  dms_datastore.auto_screen_pipeline.groovy  dms_datastore.download_raw.pipeline.groovy  dms_datastore.pipeline.groovy  dms_datastore.reformat.pipeline.groovy  dms_datastore_sync_to_webapp.pipeline.groovy  download_data.html  dropbox.html  environment.yml  genindex.html  index.html  install.html  install_text.html  jenkins.environment.yml  objects.inv  pyproject.toml  read_data_meta.html  repository.html  search.html  searchindex.js  setup.cfg  setup.py  station_info.html  test_file_roundtrip.py  test_rationalize_fix.py
.github/: copilot-instructions.md
.github/workflows/: build_sphinx.yml  python-package-conda.yml
_sources/: commands.rst.txt  dropbox.rst.txt  index.rst.txt  install.rst.txt  read_data_meta.rst.txt  repository.rst.txt  station_info.rst.txt
_static/: documentation_options.js
conda.recipe/: meta.yaml
dms_datastore/: __init__.py  __main__.py  _reconcile_cli.py  _version.py  auto_screen.py  caching.py  coarsen_file.py  compare_directories.py  delete_from_filelist.py  delete_non_15_min.py  download_cdec.py  download_cimis.py  download_dcc.py  download_des.py  download_hrrr.py  download_hycom.py  download_mokelumne.py  download_montezuma_gates.py  download_ncro.py  download_ncro2.py  download_ncro_cnra.py  download_noaa.py  download_nwis.py  download_smscg.py  download_ucdipm.py  download_wdl.py  dropbox_data.py  dropbox_spec.yaml  dstore_config.py  filename.py  hrrr3.py  inventory.py  logging_config.py  merge_files.py  populate_daily.py  populate_repo.py  populate_repo_cnra.py  populate_tasks.bat  prep_header.py  process_ccfb_gate_height.py  (+24 more)
dms_datastore/config_data/: compare_excepts_formatted.txt  daily_data_manifest.csv  daily_dropbox.yaml  des_rationalize_cfg.yaml  dropbox_daily.yaml  dstore_config.yaml  ncro_inventory_full.csv  non_15_min_files.txt  non_15_min_files_checked.txt  processed_registry.csv  realtime_repo.yaml  result_aquarius_mapping.csv  screen_config_daily.yaml  screen_config_v20230126.yaml  screen_regions_v20230126.dbf  screen_regions_v20230126.shp  screen_regions_v20230126.shx  spot_check_config.yaml  spot_check_spec.yaml  station_config.yaml  station_dbase.csv  station_subloc.csv  structures_registry.csv  variable_mappings.csv  variables.csv
dms_datastore/example/: des_stations.txt
dms_datastore/processed/: process_ccfb_gate_height.py  process_elev_data.py  process_exports.py  process_flow.py  process_salt.py  process_temp.py  process_yolo.py  processed_config.yml
dms_datastore/processed/archive/: process_ccf_water_level.py  process_yolo.py
docs/doctrees/: concepts.doctree  download_data.doctree  index.doctree  install.doctree  install_text.doctree  read_data_meta.doctree  repository.doctree  station_info.doctree
docs/html/: .buildinfo  concepts.html  download.html  download_data.html  genindex.html  index.html  install.html  install_text.html  objects.inv  read_data_meta.html  repository.html  search.html  searchindex.js  station_info.html
docs/html/_sources/: concepts.rst.txt  download_data.rst.txt  index.rst.txt  install.rst.txt  install_text.rst.txt  read_data_meta.rst.txt  station_info.rst.txt
docs/html/_static/: documentation_options.js
docsrc/: 0.17  1.0  Makefile  bulk_agency.mmd  commands.rst  concepts.rst  conf.py  download_data.rst  dropbox.rst  index.rst  install_text.rst  make.bat  read_data_meta.rst  repo.md  repo2.md  repository.rst  requirements.txt  simple_acquisition.mmd  station_info.rst  update.md
docsrc/notebooks/: cache.ipynb
examples/: stationlist.txt
examples/dropbox/: dropbox_daily.yaml  dropbox_spec.yaml  dropbox_spec_ccf.yaml  dropbox_spec_ccf_downele.yaml  dropbox_spec_ccf_upele.yaml
examples/merging/: splice_merge_expected_results.md
examples/reconcile/: playground_reconcile.py  readme.md
notebooks/: cache.html  cache.ipynb  caching_example.ipynb  map_inventory_explorer.ipynb
test_download/: ex_cimis.py  ex_ucdipm.py
test_repo/: test_bay_delta_repo.py
tests/: test_auto_screen_continue_on_error.py  test_download_cimis.py  test_download_ncro_async.py  test_downloader_continue_on_error.py  test_dstore_config.py  test_file_inventory.py  test_filename.py  test_format_usgs.py  test_import.py  test_inventory.py  test_ncro_read_after_download.py  test_ncro_session_get_harness.py  test_populate_repo_failures.py  test_populate_repo_units.py  test_read_ts_index_name.py  test_read_ts_repo  test_read_yaml_header.py  test_reconcile_data_matrix.py  test_reformat_continue_on_error.py  test_repo_config.py  test_screener_lof.py  test_write_ts.py  test_yaml_headers.py
tests/data/: header_data.txt
