[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dms_datastore"
description = "Downloading tools and data repository management"
dynamic = ["version"]
authors = [
    {name = "Eli Ateljevich", email = "Eli.Ateljevich@water.ca.gov"},
    {name = "Nicky Sandhu", email = "psandhu@water.ca.gov"}
]
readme = "README.rst"
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.8,<3.14"
keywords = ["dms_datastore", "data", "repository", "download"]
classifiers = [
    "Development Status :: 0 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "vtools3",
    "pyyaml",
    "beautifulsoup4",
    "tqdm",
    "requests",
    "boto3",
    "lxml",
    "openpyxl",
    "paramiko",
    "pandas>=2",
    "numpy",
    "xarray",
    "dask",
    "scikit-learn",
    "matplotlib",
    "cfgrib",
    "diskcache",
    "pytest",
    "pytest-runner",
    "tabula-py"
]

[project.optional-dependencies]
dev = [
    "pandoc"
]
# These are the tools needed to perform documentation
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-click",
    "sphinx-design",
    "sphinx-argparse",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "myst-parser",
    "numpydoc",
    "pillow>=4.0.0",
    "nbsphinx",
	"nbconvert",
	"ipykernel",
    "docutils",
	"pandoc",
	"matplotlib",
	"ipython"
]

#These are the tools needed to perform testing. 
test = [
    "pytest>=3",
    "pytest-cov",
    "tox",
    "click"
]

# If using pip, these would be used for the build
# similar tools are listed in python-package-conda.yml and if there are minimum versions (e.g. setuptools)
# this is where they should be spelled out
build = [
    "build",
    "pip",
    "setuptools>68",
    "wheel",
    "setuptools-scm"
]
[project.urls]
Homepage = "https://github.com/CADWRDeltaModeling/dms_datastore"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dms_datastore"]
exclude = ["docsrc"]

[tool.setuptools_scm]

[tool.setuptools.package-data]
dms_datastore = [
    "config_data/*.csv",
    "config_data/*.yaml",
    "usgs_parameter_cd_query.txt",
    "config_data/*.sh*",
    "config_data/*.prj",
    "config_data/*.dbf",
    "config_data/*.txt",
]

[tool.pytest.ini_options]
norecursedirs = [".*", "*.egg*", "build", "dist", "conda.recipe"]
addopts = "--junitxml=junit.xml --ignore setup.py --ignore run_test.py --tb native --strict-markers --durations=20"
markers = ["serial: execute test serially (to avoid race conditions)"]
