[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dms_datastore"
description = "Downloading tools and data repository management"
dynamic = ["version"]
authors = [
    {name = "Eli Ateljevich", email = "Eli.Ateljevich@water.ca.gov"},
    {name = "Nicky Sandhu", email = "psandhu@water.ca.gov"}
]
readme = "README.rst"
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.8,<3.14"
keywords = ["dms_datastore", "data", "repository", "download"]
classifiers = [
    "Development Status :: 0 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "vtools3",
    "pyyaml",
    "beautifulsoup4",
    "tqdm",
    "requests",
    "boto3",
    "lxml",
    "openpyxl",
    "omegaconf>=2.3",
    "paramiko",
    "pandas>=2",
    "numpy",
    "xarray",
    "dask",
    "scikit-learn",
    "matplotlib",
    "cfgrib",
    "diskcache",
    "pytest",
    "pytest-runner",
]

[project.optional-dependencies]
dev = [
    "pandoc"
]
# These are the tools needed to perform documentation
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-click",
    "sphinx-design",
    "sphinx-argparse",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "myst-parser",
    "numpydoc",
    "pillow>=4.0.0",
    "nbsphinx",
	"nbconvert",
	"ipykernel",
    "docutils",
	"pandoc",
	"matplotlib",
	"ipython"
]

#These are the tools needed to perform testing. 
test = [
    "pytest>=3",
    "pytest-cov",
    "tox",
    "click"
]

# If using pip, these would be used for the build
# similar tools are listed in python-package-conda.yml and if there are minimum versions (e.g. setuptools)
# this is where they should be spelled out
build = [
    "build",
    "pip",
    "setuptools>68",
    "wheel",
    "setuptools-scm"
]
[project.urls]
Homepage = "https://github.com/CADWRDeltaModeling/dms_datastore"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dms_datastore"]
exclude = ["docsrc"]

[tool.setuptools_scm]
write_to = "dms_datastore/_version.py"

[tool.setuptools.package-data]
dms_datastore = [
    "config_data/*.csv",
    "config_data/*.yaml",
    "usgs_parameter_cd_query.txt",
    "config_data/*.sh*",
    "config_data/*.prj",
    "config_data/*.dbf",
    "config_data/*.txt",
]

[tool.pytest.ini_options]
norecursedirs = [".*", "*.egg*", "build", "dist", "conda.recipe"]
addopts = "--junitxml=junit.xml --ignore setup.py --ignore run_test.py --tb native --strict-markers --durations=20"
markers = ["serial: execute test serially (to avoid race conditions)"]

[project.scripts]
dms = "dms_datastore.__main__:cli"
download_noaa = "dms_datastore.download_noaa:download_noaa_cli"
download_hycom = "dms_datastore.download_hycom:download_hycom_cli"
download_hrrr = "dms_datastore.download_hrrr:download_hrrr_cli"
download_cdec = "dms_datastore.download_cdec:download_cdec_cli"
download_wdl = "dms_datastore.download_wdl:download_wdl_cli"
download_nwis = "dms_datastore.download_nwis:download_nwis_cli"
download_des = "dms_datastore.download_des:download_des_cli"
download_ncro = "dms_datastore.download_ncro:download_ncro_cli"
download_mokelumne = "dms_datastore.download_mokelumne:download_mokelumne_cli"
download_ucdipm = "dms_datastore.download_ucdipm:download_ucdipm_cli"
download_cimis = "dms_datastore.download_cimis:download_cimis_cli"
download_dcc = "dms_datastore.download_dcc:download_dcc_cli"
download_montezuma_gates = "dms_datastore.download_montezuma_gates:download_montezuma_gates_cli"
download_smscg = "dms_datastore.download_smscg:download_smscg_cli"
compare_directories = "dms_datastore.compare_directories:compare_dir_cli"
populate_repo = "dms_datastore.populate_repo:populate_main_cli"
station_info = "dms_datastore.station_info:station_info_cli"
reformat = "dms_datastore.reformat:reformat_cli"
auto_screen = "dms_datastore.auto_screen:auto_screen_cli"
inventory = "dms_datastore.inventory:inventory_cli"
usgs_multi = "dms_datastore.usgs_multi:usgs_multi_cli"
delete_from_filelist = "dms_datastore.delete_from_filelist:delete_from_filelist_cli"
data_cache = "dms_datastore.caching:data_cache_cli"
merge_files = "dms_datastore.merge_files:merge_files_cli"
dropbox = "dms_datastore.dropbox_data:dropbox_cli"
coarsen = "dms_datastore.coarsen_file:coarsen_ts_cli"
update_repo = "dms_datastore.update_repo:main"
update_flagged_data = "dms_datastore.update_flagged_data:main"
rationalize_time_partitions = "dms_datastore.rationalize_time_partitions:rationalize_time_partitions_cli"
